--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Q</title>
+    <title>Bed Census</title>
     <link rel="stylesheet" href="./app.css">
 </head>
 <body>
