--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="reactRoot"></div>
 </body>
-    <script src="./bundle.js"></script>
+    <script src="./status.js"></script>
     <!--[if lt IE 9]>
       <script>
         (function(){
