ready for beautifucation

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./app.css">
 </head>
 <body>
-    <div id="reactRoot"></div>
+    <div id="reactRoot" />
 </body>
     <script src="./status.js"></script>
     <!--[if lt IE 9]>
