change heights and width of chart

--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <img src="images/5abramhealthlogo-transparent.png" height="5%" width="5%">
+          <a class="navbar-brand" href="#">Hospital Name</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+       <!--  <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -43,7 +44,7 @@
             <li><a href="../navbar-static-top/">Static top</a></li>
             <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div --><!--/.nav-collapse -->
       </div>
     </nav>
 
@@ -55,6 +56,7 @@
     <div class="footer navbar-fixed-bottom">
       <div class="container">
         <p>Powered by Source Fusion &copy; 2015.</p>
+        <button type="button" class="btn btn-danger">^</button>
       </div>
     </div>
 </body>
