add basic searchbar

--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,11 @@
       </div>
     </nav>
 
+    <div class="col-md-4">
+      <input class="form-control" type="search" />
+      <span class="glyphicon glyphicon-search"></span>
+    </div>
+
     <div class="footer navbar-fixed-bottom">
       <div class="container">
         <p>Powered by Source Fusion &copy; 2015.</p>
