--- a/app/index.html
+++ b/app/index.html
@@ -17,51 +17,47 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Floor name</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li><a href="../navbar-static-top/">Static top</a></li>
-            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
-          </ul>
-        </div>
+<!--
+        <div class="row">
+ -->
+<!--           <div class="col-md-4">
+          </div> -->
+
+            <ul class="nav navbar-nav navbar-right">
+              <li><input class="form-control" id="search-form" type="search" /></li>
+              <li><span class="glyphicon glyphicon-search"></span></li>
+              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Floors <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/user/preferences"><i class="icon-cog"></i>1</a></li>
+                  <li><a href="/help/support"><i class="icon-envelope"></i>2</a></li>
+                  <li><a href="/help/support"><i class="icon-envelope"></i>3</a></li>
+                  <li><a href="/help/support"><i class="icon-envelope"></i>4</a></li>
+                </ul>
+              </li>
+              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, User <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/user/preferences"><i class="icon-cog"></i> Preferences</a></li>
+                  <li><a href="/help/support"><i class="icon-envelope"></i> Contact Support</a></li>
+                  <li class="divider"></li>
+                  <li><a href="/auth/logout"><i class="icon-off"></i> Logout</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
       </div>
     </nav>
-
-    <div class="col-md-4">
-      <input class="form-control" type="search" />
-      <span class="glyphicon glyphicon-search"></span>
-    </div>
+<!--     </div> -->
 
     <div class="footer navbar-fixed-bottom">
-      <div class="container">
-        <p>Powered by Source Fusion &copy; 2015.</p>
+      <div class="footer-info">
+        <p>Powered by <a href="https://damp-thicket-6200.herokuapp.com/">Source Fusion</a> &copy; 2015.</p>
       </div>
     </div>
-
     <div id="reactRoot" />
-
-</body>
-
     <script src="./status.js"></script>
+</body>
     <!--[if lt IE 9]>
       <script>
         (function(){
