--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 
   <footer class="footer navbar-fixed-bottom">
     <div class="footer-info">
-      <p>Powered by <a href="https://damp-thicket-6200.herokuapp.com/">Source Fusion</a> &copy; 2015.</p>
+      <p>Powered by <a href="./site.html">Source Fusion</a> &copy; 2015.</p>
     </div>
   </footer>
   <div id="reactRoot" />
