--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,9 @@
     <title>Bed Census</title>
     <link rel="stylesheet" href="./app.css">
 </head>
-<body>
+<body class="portrait">
   <!-- Fixed navbar -->
-  <nav class="navbar navbar-default navbar-fixed-top" id="navbar-container">
+<!--   <nav class="navbar navbar-default navbar-fixed-top" id="navbar-container">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -41,7 +41,7 @@
         </li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
 
   <footer class="footer navbar-fixed-bottom">
     <div class="footer-info">
@@ -49,8 +49,8 @@
     </div>
   </footer>
   <div id="reactRoot" />
-  <script src="./status.js"></script>
 </body>
+  <script src="./status.js"></script>
     <!--[if lt IE 9]>
       <script>
         (function(){
