build a dynamic header

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
   </footer>
   <div id="reactRoot" />
 </body>
-  <script src="./status.js"></script>
+  <script async src="./status.js"></script>
     <!--[if lt IE 9]>
       <script>
         (function(){
