--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,12 @@
 </head>
 <body class="portrait">
 
+  <div id="reactRoot" />
   <footer class="footer navbar-fixed-bottom">
     <div class="footer-info">
       <p>Powered by <a href="./site.html">Source Fusion</a> &copy; 2015.</p>
     </div>
   </footer>
-  <div id="reactRoot" />
 </body>
 
   <script async src="./status.js"></script>
@@ -29,4 +29,6 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/3.4.0/es5-shim.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/3.4.0/es5-sham.js"></script>
     <![endif]-->
+
+    <script src="./lib/jquery/dist/jquery.min.js"></script>
 </html>
