--- a/app/index.html
+++ b/app/index.html
@@ -30,5 +30,5 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/3.4.0/es5-sham.js"></script>
     <![endif]-->
 
-    <script src="./lib/jquery/dist/jquery.min.js"></script>
+    <!-- <script src="./lib/jquery/dist/jquery.min.js"></script> -->
 </html>
