html image tag fix, attempt to route search data to header component with event system... considering to use flux...

--- a/app/site.html
+++ b/app/site.html
@@ -109,19 +109,19 @@
       <p>Integrates with...</p>
         <div class="intergration-img">
           <div class="col-md-2">
-            <img src="images/allscripts.png"></img>
+            <img src="images/allscripts.png" />
           </div>
           <div class="col-md-2">
-            <img src="images/epic.png"></img>
+            <img src="images/epic.png" />
           </div>
           <div class="col-md-4">
-            <img src="images/hippa.png"></img>
+            <img src="images/hippa.png" />
           </div>
           <div class="col-md-2">
-            <img src="images/infinite.png"></img>
+            <img src="images/infinite.png" />
           </div>
           <div class="col-md-2">
-            <img src="images/mkesson.png"></img>
+            <img src="images/mkesson.png" />
           </div>
         </div>
       </div>
