--- a/app/site.html
+++ b/app/site.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
@@ -22,11 +23,11 @@
             <img alt="sf-logo" class="logo" src="images/5abramhealthlogo-transparent.png" />
           </a>
         </div>
-      <ul class="nav navbar-nav navbar-right" id="navbar-items">
-        <li><a href="../navbar/">Product</a></li>
-        <li><a href="../navbar-static-top/">Company</a></li>
-        <li><a href="../navbar-static-top/">Support</a></li>
-      </ul>
+        <ul class="nav navbar-nav navbar-right" id="navbar-items">
+          <li><a href="../navbar/">Product</a></li>
+          <li><a href="../navbar-static-top/">Company</a></li>
+          <li><a href="../navbar-static-top/">Support</a></li>
+        </ul>
       </div>
     </nav>
 
@@ -39,31 +40,31 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-        <div class="slider-size">
-          <img class="carousel-img" src="images/fatherandson.jpg" alt="...">
-        </div>
+          <div class="slider-size">
+            <img class="carousel-img" src="images/fatherandson.jpg" alt="...">
+          </div>
           <div class="container">
-<!--             <div class="carousel-caption">
+            <!--             <div class="carousel-caption">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo, tellus sit amet egestas euismod, massa nibh.</p>
             </div> -->
           </div>
         </div>
         <div class="item">
-        <div class="slider-size">
-          <img src="images/womeniphone.jpg" alt="...">
-        </div>
+          <div class="slider-size">
+            <img src="images/womeniphone.jpg" alt="...">
+          </div>
           <div class="container">
-<!--             <div class="carousel-caption">
+            <!--             <div class="carousel-caption">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo, tellus sit amet egestas euismod, massa nibh varius nibh, molestie sodales lectus risus nec nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus dictum, tellus eu convallis tempor, nulla felis mattis dolor, quis laoreet leo ipsum sed nisl. Fusce dictum neque est, id bibendum lectus posuere eu. Suspendisse quis posuere eros. Pellentesque nec molestie urna, ac mollis ante. Vestibulum vehicula in libero quis imperdiet. Nulla facilisis id ex quis lacinia.</p>
             </div> -->
           </div>
         </div>
         <div class="item">
-        <div class="slider-size">
-          <img src="images/manworking.jpg" alt="...">
-        </div>
+          <div class="slider-size">
+            <img src="images/manworking.jpg" alt="...">
+          </div>
           <div class="container">
-<!--             <div class="carousel-caption">
+            <!--             <div class="carousel-caption">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo, tellus sit amet egestas euismod, massa nibh varius nibh, molestie sodales lectus risus nec nunc. Fusce dictum neque est, id bibendum lectus posuere eu. Suspendisse quis posuere eros. Pellentesque nec molestie urna, ac mollis ante. Vestibulum vehicula in libero quis imperdiet. Nulla facilisis id ex quis lacinia.</p>
             </div> -->
           </div>
@@ -106,7 +107,7 @@
 
     <div class="integration-container">
       <div class="row-integration">
-      <p>Integrates with...</p>
+        <p>Integrates with...</p>
         <div class="intergration-img">
           <div class="col-md-2">
             <img src="images/allscripts.png" />
@@ -135,48 +136,56 @@
       <div class="process-content">
         <div class="col-md-3" id="process-1">
           <span class="glyphicon glyphicon-user"></span>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo, tellus sit amet egestas euismod, massa nibh varius nibh, molestie sodales lectus risus nec nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus dictum, tellus eu convallis tempor, nulla felis mattis dolor, quis laoreet leo ipsum sed nisl. Fusce dictum neque est, id bibendum lectus posuere eu. Suspendisse quis posuere eros. Pellentesque nec molestie urna, ac mollis ante. Vestibulum vehicula in libero quis imperdiet. Nulla facilisis id ex quis lacinia.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo, tellus sit amet egestas euismod, massa nibh varius nibh, molestie sodales lectus risus nec nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+            cubilia Curae; Phasellus dictum, tellus eu convallis tempor, nulla felis mattis dolor, quis laoreet leo ipsum sed nisl. Fusce dictum neque est, id bibendum lectus posuere eu. Suspendisse quis posuere eros. Pellentesque nec molestie urna, ac
+            mollis ante. Vestibulum vehicula in libero quis imperdiet. Nulla facilisis id ex quis lacinia.</p>
         </div>
         <div class="col-md-3" id="process-2">
           <span class="glyphicon glyphicon-level-up"></span>
-          <p>Nunc aliquet, velit vitae vehicula lacinia, leo nunc consequat nunc, et accumsan massa ipsum sed velit. Duis fringilla nisl eget enim sodales, nec interdum justo viverra. Vestibulum sed purus vulputate, mollis odio in, mattis elit. Curabitur elementum leo nec mi imperdiet, sollicitudin lobortis quam placerat. Fusce consectetur nibh et finibus consectetur. Suspendisse vehicula ligula vitae ultricies ornare. Vivamus enim lacus, fermentum sit amet quam sit amet, efficitur rhoncus quam. Vivamus euismod arcu nec dui maximus eleifend. Sed sit amet purus vitae augue scelerisque scelerisque. Integer varius ante nec pharetra dapibus. Nullam ac consectetur lorem. Fusce mollis viverra finibus.</p>
+          <p>Nunc aliquet, velit vitae vehicula lacinia, leo nunc consequat nunc, et accumsan massa ipsum sed velit. Duis fringilla nisl eget enim sodales, nec interdum justo viverra. Vestibulum sed purus vulputate, mollis odio in, mattis elit. Curabitur
+            elementum leo nec mi imperdiet, sollicitudin lobortis quam placerat. Fusce consectetur nibh et finibus consectetur. Suspendisse vehicula ligula vitae ultricies ornare. Vivamus enim lacus, fermentum sit amet quam sit amet, efficitur rhoncus
+            quam. Vivamus euismod arcu nec dui maximus eleifend. Sed sit amet purus vitae augue scelerisque scelerisque. Integer varius ante nec pharetra dapibus. Nullam ac consectetur lorem. Fusce mollis viverra finibus.</p>
         </div>
 
         <div class="col-md-3" id="process-3">
           <span class="glyphicon glyphicon-bed"></span>
-          <p>Proin ut eros quis dui bibendum condimentum. Nunc varius mauris nec gravida ultrices. Praesent vitae ligula auctor, cursus ante mattis, bibendum libero. Nunc ut iaculis nunc. Proin vitae urna quis justo pharetra porttitor quis id libero. Curabitur sed ornare urna. Proin elit lectus, gravida nec molestie quis, dignissim nec nulla. Quisque elementum hendrerit velit sagittis tempor. Fusce mi turpis, lobortis faucibus dui a, feugiat suscipit lectus. Morbi nec fermentum mauris, in egestas quam. Proin non nulla ut ex bibendum faucibus.</p>
+          <p>Proin ut eros quis dui bibendum condimentum. Nunc varius mauris nec gravida ultrices. Praesent vitae ligula auctor, cursus ante mattis, bibendum libero. Nunc ut iaculis nunc. Proin vitae urna quis justo pharetra porttitor quis id libero. Curabitur
+            sed ornare urna. Proin elit lectus, gravida nec molestie quis, dignissim nec nulla. Quisque elementum hendrerit velit sagittis tempor. Fusce mi turpis, lobortis faucibus dui a, feugiat suscipit lectus. Morbi nec fermentum mauris, in egestas
+            quam. Proin non nulla ut ex bibendum faucibus.</p>
         </div>
 
         <div class="col-md-3" id="process-4">
           <span class="glyphicon glyphicon-copy"></span>
-          <p>Quisque semper ipsum eget neque sagittis, id sodales lorem malesuada. Integer sed odio id leo eleifend aliquam ac sit amet felis. Vivamus et mattis nibh. Cras sed lacus suscipit, pulvinar felis nec, lacinia tellus. Nunc at semper magna, vel convallis turpis. Donec faucibus vulputate nulla, ac feugiat justo venenatis a. Suspendisse eu viverra eros.</p>
+          <p>Quisque semper ipsum eget neque sagittis, id sodales lorem malesuada. Integer sed odio id leo eleifend aliquam ac sit amet felis. Vivamus et mattis nibh. Cras sed lacus suscipit, pulvinar felis nec, lacinia tellus. Nunc at semper magna, vel
+            convallis turpis. Donec faucibus vulputate nulla, ac feugiat justo venenatis a. Suspendisse eu viverra eros.</p>
         </div>
       </div>
     </div>
-  </div><!-- big-container -->
+  </div>
+  <!-- big-container -->
 
-    <footer>
-      <div class="footer-row">
-        <div class="col-md-3" id="footer-col">
-          <ul class="product-footer">
-            <li><a href="#">Product</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3" id="footer-col">
-          <ul class="company-footer">
-            <li><a href="#">Company</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3" id="footer-col">
-          <ul class="support-footer">
-            <li><a href="#">Support</a></li>
-          </ul>
-        </div>
-        <div class="pull-right col-md-3" id="bfoot">
-          <p>Abram Health, Inc. &copy; 2015 | hospital workflow made easy</p>
-        </div>
+  <footer>
+    <div class="footer-row">
+      <div class="col-md-3" id="footer-col">
+        <ul class="product-footer">
+          <li><a href="#">Product</a></li>
+        </ul>
       </div>
-<!--         <div class="footer-bottom">
+      <div class="col-md-3" id="footer-col">
+        <ul class="company-footer">
+          <li><a href="#">Company</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3" id="footer-col">
+        <ul class="support-footer">
+          <li><a href="#">Support</a></li>
+        </ul>
+      </div>
+      <div class="pull-right col-md-3" id="bfoot">
+        <p>Abram Health, Inc. &copy; 2015 | hospital workflow made easy</p>
+      </div>
+    </div>
+    <!--         <div class="footer-bottom">
           <span class="pull-left">
             <a href="mailto:support@abram.com">
             <p>support@abram.com | +1 800 Abram | Privacy Policy</p>
@@ -185,8 +194,9 @@
             <p>Abram Health, Inc. &copy; 2015 | hospital workflow made easy</p>
           </span>
         </div> -->
-    </footer>
+  </footer>
   <script src="./site.js"></script>
 
 </body>
+
 </html>
